[package]
name = "luis_sys"
version = "0.3.14"
authors = ["Gary Hai <gary@neunit.com>"]
edition = "2018"
description = "FFI bindings for Microsoft LUIS API."
readme = "README.md"
keywords = ["ffi", "speech", "deep-learning", "microsoft", "luis"]
categories = ["external-ffi-bindings", "asynchronous"]
repository = "https://github.com/neunit/luis_sys"
documentation = "https://docs.rs/luis_sys"
license = "MIT"

[dependencies]
bitflags = "1.0.4"
env_logger = "0.6.0"
failure = "0.1.5"
futures = "0.1.25"
log = "0.4.6"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0.38"

[dev-dependencies]
tokio = "0.1.15"

[build-dependencies]
bindgen = "0.47.1"